--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:creator" content="@juliussohn">
 <meta name="twitter:site" content="@juliussohn">
-<meta property="og:url" content="https://subtract.one"/>
+<meta property="og:url" content="https://jakichen.github.io/subtract.one/"/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="SUBTRACT ONE | An analog inspired Web Audio Synthesizer"/>
 <meta property="og:image" content="%PUBLIC_URL%/images/twitter-preview.png"/>
