--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://jakichen.github.io/subtract.one/"/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="SUBTRACT ONE | An analog inspired Web Audio Synthesizer"/>
-<meta property="og:image" content="%PUBLIC_URL%/images/twitter-preview.png"/>
+<meta property="og:image" content="https://jakichen.github.io/subtract.one/images/twitter-preview.png"/>
 </head>
 <body>
 <noscript>
